# 1c

./: .env.email  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  FASTAPI_README.md  FINAL_ASSESSMENT.md  FINAL_REVIEW.md  FINAL_STATUS.md  LICENSE  LLM_SUMMARY.md  MONETIZATION_ANALYSIS.md  PROJECT_STATUS.md  README.md  SSL_EMAIL_SETUP.md  TRIAL_SYSTEM_DOCS.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  ocr_cache.db  processing_history.db  pyproject.toml  requirements.txt  tailwind.config.js  test_ocr_recognition_and_classification.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_trial_management.py
certs/: server.crt  server.key
config/: field_mappings.py
core_parser/: __init__.py  config.yaml  logger.py
core_parser/batch_processor/: pipeline.py
core_parser/utils/: inn_validator.py  (+6 more)
docker/: Dockerfile  docker-compose.yml
docs/: ADVANCED_EXCEL_PROCESSING.md  AI_DETECTOR_IMPROVEMENTS.md  AI_ENHANCED_PARSER.md  AI_IMPLEMENTATION_SUMMARY.md  CHECKLIST.md  CONCEPT.md  CONTEXT_AWARE_AI.md  CORE_TEST_REPORT.md  FILTERS_IMPLEMENTATION.md  FORECASTING_MODULE.md  HTTPS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LLM_ARCHITECTURE.md  LOAD_TESTS_GUIDE.md  MOBILE_ADAPTATION.md  OLLAMA_SETUP.md  PAYMENTS_IMPLEMENTATION.md  PROGRESS.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_IMPLEMENTATION.md  SUCCESS_CRITERIA.md  ai_model_integration_analysis.md  ocr_improvements_summary.md
legal/: documents.md
marketing/: strategy.md
monitoring/: prometheus.yml
nginx/: nginx.conf
results/: document_groups.json  results.json
scripts/: backup_db.sh  deploy.sh  deploy_prod.sh  setup_ssl.sh
src/: app.py
test_data/: csv_semicolon.csv  custom_column_names.xlsx  english_columns.xlsx  hierarchical_data.xlsx  messy_data.xlsx  standard_1c_sales.xlsx
tests/: conftest.py  test_ai_analyzer.py  test_ai_detector.py  test_business_rules.py  test_classifier.py  test_config_loader.py  test_error_handling.py  test_field_extractors.py  test_forecasting.py  test_hierarchy_parser.py  test_industry_context.py  test_infrastructure.py  test_load.py  test_ocr_cache.py  test_parser.py  test_payments.py  test_pdf_reader.py  test_pipeline.py  test_security.py  test_table_normalizer.py
web/: index.html
(+86 files in other folders)
