[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1c-dashboard-service"
version = "0.1.0"
description = "SaaS-сервис для автоматического преобразования выгрузок 1С в аналитические дашборды"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kirill Kas", email = "support@1cdashboard.ru"}
]
keywords = ["1c", "dashboard", "analytics", "forecasting", "business-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "duckdb>=0.9.0",
    
    # AI/ML
    "ollama>=0.1.0",
    "prophet>=1.1.5",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.0",
    
    # Visualization
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    
    # Export
    "python-pptx>=0.6.23",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    
    # Storage
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utils
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

streamlit = [
    "streamlit>=1.29.0",
]

[project.urls]
Homepage = "https://github.com/KirillKas17/1c"
Documentation = "https://github.com/KirillKas17/1c/tree/main/docs"
Repository = "https://github.com/KirillKas17/1c.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
